# graphics-cl

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
demo/: draw_model.cc
gcl/: CMakeLists.txt
gcl/src/: comput.h  gui.h  promise.h
gcl/src/common/: exception.h  image.cc  image.h  logger.cc  logger.h  matrix.h  mesh.cc  mesh.h  reflection.h  singleton.h  traits.h  unit_test.h  utilities.h
gcl/tests/: demo_draw_model.cc  soft_renderer.cc  test_comput.cc  test_rasterizer.cc  test_utils.h
include/: cltmpl.h  comput.h  gui.h  matrix.h  model.h  promise.h  rasterizer.h  test.h
kernels/: fragment_shader.cl  interpolation.cl  rasterizer.cl  vertex_shader.cl
test/: comput_test.cc  interpolation-cpp.cc  interpolation.cc  interpolation_cl_test.cc  matrix_test.cc  model_test.cc  rasterizer.cc  rasterizer_test.cc
textures/: texture.ppm
